// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddPaymentMethodForm renders 1`] = `
<div
  className="form-container"
>
  <TextInput
    changePasswordVisibilityStatus={[Function]}
    className=""
    dark={false}
    disabled={false}
    errorMessage=""
    id="cardNumber"
    inputDidChange={false}
    isValid={true}
    label="Card Number"
    name="cardNumber"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Card Number"
    shouldShowVisibility={false}
    type="text"
    value=""
  />
  <div
    className="column-2"
  >
    <TextInput
      changePasswordVisibilityStatus={[Function]}
      className=""
      dark={false}
      disabled={false}
      errorMessage=""
      id="cardExpirationDate"
      inputDidChange={false}
      isValid={true}
      label="Expiration"
      name="cardExpirationDate"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Expiration"
      shouldShowVisibility={false}
      type="text"
      value=""
    />
    <TextInput
      changePasswordVisibilityStatus={[Function]}
      className=""
      dark={false}
      disabled={false}
      errorMessage=""
      id="zip"
      inputDidChange={false}
      isValid={true}
      label="Zip"
      name="zip"
      onBlur={null}
      onChange={[Function]}
      placeholder="Zip"
      shouldShowVisibility={false}
      type="text"
      value=""
    />
  </div>
  <div
    className="column-2"
  >
    <TextInput
      changePasswordVisibilityStatus={[Function]}
      className=""
      dark={false}
      disabled={false}
      errorMessage=""
      id="cvv"
      inputDidChange={false}
      isValid={true}
      label="CVV"
      name="cvv"
      onBlur={null}
      onChange={[Function]}
      placeholder="CVV"
      shouldShowVisibility={false}
      type="text"
      value=""
    />
  </div>
  <div />
  <div
    className="column-2 btn-container"
  >
    <div
      className="btn-disabled"
    >
      <Button
        bordered={true}
        buttonType="standard"
        className=""
        customStyles=""
        disabled={true}
        icon={null}
        inverted={false}
        onClick={[Function]}
        ripple={false}
        showLoader={false}
        type="standard"
      >
        Save
      </Button>
    </div>
  </div>
</div>
`;

exports[`AddPaymentMethodForm renders without onFormValidCheck function 1`] = `
<div
  className="form-container"
>
  <TextInput
    changePasswordVisibilityStatus={[Function]}
    className=""
    dark={false}
    disabled={false}
    errorMessage=""
    id="cardNumber"
    inputDidChange={false}
    isValid={true}
    label="Card Number"
    name="cardNumber"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Card Number"
    shouldShowVisibility={false}
    type="text"
    value=""
  />
  <div
    className="column-2"
  >
    <TextInput
      changePasswordVisibilityStatus={[Function]}
      className=""
      dark={false}
      disabled={false}
      errorMessage=""
      id="cardExpirationDate"
      inputDidChange={false}
      isValid={true}
      label="Expiration"
      name="cardExpirationDate"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Expiration"
      shouldShowVisibility={false}
      type="text"
      value=""
    />
    <TextInput
      changePasswordVisibilityStatus={[Function]}
      className=""
      dark={false}
      disabled={false}
      errorMessage=""
      id="zip"
      inputDidChange={false}
      isValid={true}
      label="Zip"
      name="zip"
      onBlur={null}
      onChange={[Function]}
      placeholder="Zip"
      shouldShowVisibility={false}
      type="text"
      value=""
    />
  </div>
  <div
    className="column-2"
  >
    <TextInput
      changePasswordVisibilityStatus={[Function]}
      className=""
      dark={false}
      disabled={false}
      errorMessage=""
      id="cvv"
      inputDidChange={false}
      isValid={true}
      label="CVV"
      name="cvv"
      onBlur={null}
      onChange={[Function]}
      placeholder="CVV"
      shouldShowVisibility={false}
      type="text"
      value=""
    />
  </div>
  <div />
  <div
    className="column-2 btn-container"
  >
    <div
      className="btn-disabled"
    >
      <Button
        bordered={true}
        buttonType="standard"
        className=""
        customStyles=""
        disabled={true}
        icon={null}
        inverted={false}
        onClick={[Function]}
        ripple={false}
        showLoader={false}
        type="standard"
      >
        Save
      </Button>
    </div>
    <Button
      bordered={true}
      buttonType="standard"
      className=""
      customStyles=""
      disabled={false}
      icon={null}
      inverted={false}
      onClick={[MockFunction]}
      ripple={false}
      showLoader={false}
      type="standard"
    >
      Cancel
    </Button>
  </div>
</div>
`;
